--- a/css/main.scss
+++ b/css/main.scss
@@ -175,6 +175,13 @@ body
             }
         }
 
+        .subtitle
+        {
+            font-family: $titleFont;
+            font-size: 2.5rem;
+
+        }
+
         .page
         {
             display: none;
