--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,9 @@ body {
         body #contents .title .fa:hover {
           cursor: pointer;
           color: #E3F2FD; }
+    body #contents .subtitle {
+      font-family: "Amatic SC";
+      font-size: 2.5rem; }
     body #contents .page {
       display: none; }
       body #contents .page.open {
