--- a/css/main.scss
+++ b/css/main.scss
@@ -331,6 +331,7 @@ body
                     .jobDates
                     {
                         font-weight: normal;
+                        margin-left: 0.5vw;
                     }
                 }
 
