--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,13 @@ body {
   color: #444444;
 }
 
+@media (max-width: 1300px) {
+  html {font-size: 80%;}
+  body {
+    width: 80%;
+  }
+}
+
 
 h1, h2, h3, h4, h5 {
   /* margin: 3rem 0 1.38rem; */
