--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-   html {font-size: 100%;}
+html {font-size: 100%;}
 
 body {
   font-family: 'Outfit', serif;
@@ -120,11 +120,19 @@ h1 {
 
 h2 {font-size: 2.441rem;}
 
-h3, section>ul>li {font-size: 1.953rem;}
+h3, section>ul>li {
+  font-size: 1.953rem;
+}
 
-h4, section>ul>li>ul>li {font-size: 1.563rem;}
+h4, section>ul>li>ul>li {
+  font-size: 1.563rem;
+  color: #616161;
+}
 
-h5, section>ul>li>ul>li>ul>li, p {font-size: 1.25rem;}
+h5, section>ul>li>ul>li>ul>li, p {
+  font-size: 1.25rem;
+  color: #616161;
+}
 
 section>ul, section>ul>li>ul {
   list-style-type: none;
@@ -146,6 +154,14 @@ h3, h4, h5, p, ul>li>ul>li {
 
 section {
   margin: 5% 0;
+}
+
+.title-date h3 {
+  margin-bottom: 0;
+}
+
+.title-date h4 {
+  margin-top: 0;
 }
 
 /* ==========================================================================
