--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,14 @@ body {
   }
 }
 
+@media (max-width: 700px) {
+  html {font-size: 80%;}
+  body {
+    width: 90%;
+    /* line-height: 1.3; */
+  }
+}
+
 
 h1, h2, h3, h4, h5 {
   /* margin: 3rem 0 1.38rem; */
