--- a/css/main.css
+++ b/css/main.css
@@ -87,88 +87,100 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-html {font-size: 100%;}
+html {
+  font-size: 100%;
+}
 
 body {
-  font-family: 'Outfit', serif;
   padding: 5%;
   width: 60%;
+  font-family: "Outfit", serif;
   font-weight: 400;
-  line-height: 1.75;
+  line-height: 1.3;
   color: #444444;
+  font-size: 1.25rem;
 }
 
 @media (max-width: 1300px) {
-  html {font-size: 80%;}
+  html {
+    font-size: 90%;
+  }
   body {
     width: 80%;
   }
 }
 
 @media (max-width: 700px) {
-  html {font-size: 80%;}
+  html {
+    font-size: 80%;
+  }
   body {
     width: 90%;
-    /* line-height: 1.3; */
   }
 }
 
-
-h1, h2, h3, h4, h5 {
-  /* margin: 3rem 0 1.38rem; */
-  font-family: 'Fira Sans', sans-serif;
+h1,
+h2,
+h3 {
+  font-family: "Futura", sans-serif;
+  text-transform: uppercase;
   font-weight: 400;
-  line-height: 1.3;
+}
+
+h4,
+h5,
+p,
+blockquote,
+ul,
+li {
+  color: #616161;
 }
 
 h1 {
-  margin-top: 0;
   font-size: 3.052rem;
 }
 
-h2 {font-size: 2.441rem;}
+h2 {
+  font-size: 2.441rem;
+}
 
-h3, section>ul>li {
+h3 {
   font-size: 1.953rem;
 }
 
-h4, section>ul>li>ul>li {
+h4 {
   font-size: 1.563rem;
-  color: #616161;
 }
 
-h5, section>ul>li>ul>li>ul>li, p {
+h5 {
   font-size: 1.25rem;
-  color: #616161;
-}
-
-section>ul, section>ul>li>ul {
-  list-style-type: none;
-}
-
-section>ul>li {
-  padding-top: 16px;
-}
-
-h1, h2, ul {
-  font-family: 'Futura', san-serif;
-  text-transform: uppercase;
-}
-
-h3, h4, h5, p, ul>li>ul>li {
-  font-family: 'Outfit', serif;
-  text-transform: none;
 }
 
 section {
-  margin: 5% 0;
+  margin: 10% 0;
 }
 
-.title-date h3 {
-  margin-bottom: 0;
+section section {
+  margin: 0 0 5% 5%;
+}
+
+blockquote {
+  font-style: italic;
 }
 
 .title-date h4 {
+  margin-bottom: 0;
+}
+
+.title-date h5 {
+  margin-top: 0;
+}
+
+section.compact h3 {
+  margin-bottom: 0;
+}
+
+section.compact h4 {
   margin-top: 0;
 }
 
@@ -345,4 +357,3 @@ section {
     page-break-after: avoid;
   }
 }
-
