--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,6 @@ h3 {
 }
 
 h4,
-h5,
 p,
 blockquote,
 ul,
@@ -155,10 +154,16 @@ h3 {
 
 h4 {
   font-size: 1.563rem;
+  font-weight: 100;
 }
 
 h5 {
   font-size: 1.25rem;
+  font-weight: 100;
+}
+
+p {
+  font-weight: 100;
 }
 
 section {
